samples/negative/08_scoping_conflict.pas
program n08;
var
  x: integer;

procedure P;
var
  x: integer;
begin
  x := 1
end;

begin
  x := 0;
  P()
end.
